--- a/css/style.css
+++ b/css/style.css
@@ -2,4 +2,9 @@ body{
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     color: darkgreen;
+    font-size: 16px;
+}
+.container{
+    max-width: 1200px;
+    margin: 0 auto;
 }
