--- a/css/style.css
+++ b/css/style.css
@@ -14,4 +14,6 @@ body{
     max-width: 1200px;
     font-weight: bold;
     border: 1px solid black;
+    box-shadow: 2px 4px 2px;
+    padding: 16px;
 }
